# quickcheck-generic

./: quickcheck-generic.cabal  stack.yaml
src/Test/QuickCheck/Arbitrary/: Generic.hs
test/: Main.hs
