name:                quickcheck-generic
version:             0.0.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/MichaelXavier/quickcheck-generic#readme
license:             BSD3
license-file:        LICENSE
author:              Michael Xavier
maintainer:          michael@michaelxavier.net
copyright:           2015 Michael Xavier
category:            Test
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

flag lib-Werror
  default: False
  manual: True

library
  hs-source-dirs:      src
  exposed-modules:     Test.QuickCheck.Arbitrary.Generic
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck
  default-language:    Haskell2010

  if flag(lib-Werror)
    ghc-options: -Werror

  ghc-options: -Wall


test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base
                     , quickcheck-generic
                     , QuickCheck
                     , containers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

  if flag(lib-Werror)
    ghc-options: -Werror

  ghc-options: -Wall


source-repository head
  type:     git
  location: https://github.com/MichaelXavier/quickcheck-generic
